# MobileRender

./: .gitignore  README.md
platform/android/app/src/main/cpp/: CMakeLists.txt  GfxAndroid.cpp  main.cpp
platform/android/app/src/main/java/me/mecg/render/: GL2JNILib.java  GL2JNIView.java
platform/ios/Render/: kGLView.m
platform/ios/render.xcodeproj/project.xcworkspace/xcuserdata/toy.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/staticlib/: CMakeLists.txt  GfxIOS.h  GfxIOS.mm  main.cpp
platform/win/: CMakeLists.txt  main.cpp
runtime/: CMakeLists.txt
runtime/core/: core.h
runtime/gfx/: gfx.cpp  gfx.h
